# pucrio-arq-backend

./: .env  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: database.py  dependencies.py
app/models/: __init__.py  auth.py  bike.py  maintenance.py
app/routes/: __init__.py  address.py  auth.py  bikes.py  maintenances.py  weather.py
app/schemas/: __init__.py  address.py  auth.py  bike.py  maintenance.py  weather.py
app/services/: __init__.py  auth.py  awesomeapi.py  email.py  viacep.py  weather.py
docs/: arch.drawio
